Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.1
-
None
-
-
21
-
Foundation_Sprint 41 (Team 1), Team 1 Foundation_Sprint 42
Description
When checking whether a string can be successfully encoded, QTextCodec::canEncode always returns true for conversions using ICU.
The problem is that QIcuCodec::convertFromUnicode does not set state.invalidChars, which is what QTextCodec::canEncode checks to determine if a string can be encoded.
Attached is a small minimal working example.
Attachments
Issue Links
- relates to
-
QTBUG-83143 QTextCodec::canEncode always returns true for codecForLocale() on Windows
-
- Reported
-