KCharsets: add custom US-ASCII QTextCodec as workaround for QTBUG-83081